# newsboat-tui-rs

./: Cargo.toml  NOTES  README.md  TODO
crates/event_loop/: Cargo.toml
crates/event_loop/src/: app.rs  events_source.rs  item_view.rs  main.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  event.rs  feed_list.rs  form_action.rs  item_list.rs  item_view.rs  lib.rs
src/: app.rs  events_source.rs  feed_list.rs  form_action.rs  input_reader.rs  item_list.rs  item_view.rs  main.rs  stateful_list.rs  ui.rs
src/widgets/: mod.rs  text_line.rs
