[package]
name = "newsboat-tui-rs"
version = "0.1.0"
authors = ["Alexander Batischev <eual.jp@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
tui = "0.10"
signal-hook = "0.1"
libc = "0.2"
